Adding OAuth config for Github login

--- a/packages/create-app/templates/default-app/app-config.local.yaml
+++ b/packages/create-app/templates/default-app/app-config.local.yaml
@@ -1,3 +1,6 @@
 # Backstage override configuration for your local development environment
 
-url: http://localhost:7007/api/auth/github/handler/frame
+Authentication:
+  github:
+    name: backstage_dev
+    url: http://localhost:7007/api/auth/github/handler/frame
