--- a/app-config.yaml
+++ b/app-config.yaml
@@ -291,6 +291,7 @@ auth:
   #  firestore:
   #    projectId: my-project
   #    path: my-sessions
+  # see https://backstage.io/docs/auth/ to learn about auth providers
 
   environment: development
   ### Providing an auth.session.secret will enable session support in the auth-backend
@@ -303,9 +304,9 @@ auth:
         clientSecret: ${AUTH_GOOGLE_CLIENT_SECRET}
     github:
       development:
-        clientId: ${AUTH_GITHUB_CLIENT_ID}
-        clientSecret: ${AUTH_GITHUB_CLIENT_SECRET}
-        enterpriseInstanceUrl: ${AUTH_GITHUB_ENTERPRISE_INSTANCE_URL}
+        clientId: ${b213e8cef6b436bcc39c}
+        clientSecret: ${3cc4a2d7322b4a49ebc1d00dd82ee3cce8d68606}
+        enterpriseInstanceUrl: ${http://localhost:7007/api/auth/github/handler/frame}
     gitlab:
       development:
         clientId: ${AUTH_GITLAB_CLIENT_ID}
